--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Feb 22 16:45:00 GFT 2021
-sdk.dir=C\:\\Users\\USER\\AppData\\Local\\Android\\Sdk
+#Mon Feb 22 18:09:45 GFT 2021
+sdk.dir=C\:\\Users\\raine\\AppData\\Local\\Android\\Sdk
