--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Mar 01 23:22:18 GFT 2021
-sdk.dir=C\:\\Users\\raine\\AppData\\Local\\Android\\Sdk
+#Thu Mar 04 23:03:10 GFT 2021
+sdk.dir=C\:\\Users\\USER\\AppData\\Local\\Android\\Sdk
