--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@drawable/vds"
         android:supportsRtl="true"
         android:theme="@style/Theme.KPSFineTracker">
-        <activity android:name=".activity.ProfileActivity"></activity>
+        <activity android:name=".activity.licencePlate"></activity>
+        <activity android:name=".activity.ProfileActivity" />
         <activity android:name=".activity.ContactActivity" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".MainActivity" />
