--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Mar 04 23:38:22 GFT 2021
-sdk.dir=C\:\\Users\\raine\\AppData\\Local\\Android\\Sdk
+#Sat Apr 10 19:50:59 GFT 2021
+sdk.dir=C\:\\Users\\USER\\AppData\\Local\\Android\\Sdk
