--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="sr.unasat.kpsfinetracker">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -11,6 +11,7 @@
         android:roundIcon="@drawable/logo"
         android:supportsRtl="true"
         android:theme="@style/Theme.KPSFineTracker">
+        <activity android:name=".rest.WeatherMainActivity"></activity>
         <activity android:name=".activity.ContactActivity" />
         <activity android:name=".MainActivity" />
         <activity android:name=".RegisterActivity" />
@@ -22,10 +23,9 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".services.MyService"
-            android:exported="false"
-            ></service>
-
+        <service
+            android:name=".services.MyService"
+            android:exported="false" />
     </application>
 
 </manifest>
